more updates and edits. added my resume and some javascript

--- a/index.html
+++ b/index.html
@@ -22,68 +22,85 @@
     </header>
 
     <main>
-        <div class="first">
-            <div class="headshot">
+        <section class="headshot">
+            <figure>
                 <img src="./assets/images/headshot1.jpg" alt="Kashane and his dog Toto" width="500" height="600">
-            </div>
-            <div id="bio">
+            </figure>
+            <article id="bio">
                 <h2>Kashane's &#8383;iography:</h2>
                 <h6>I'll keep it short and sweet!</h6>
                 <p>That's a picture of myself and Toto. I know, it's hard to tell which one of us is more photogenic.</p>
                 <p>I was born and raised in Los Angeles, California. My father immigrated from Bangkok, Thailand, and my mother, who is of Irish and English decent, was born in Los Angeles. </p>
                 <p>I've always had a knack for mathematics and problem solving. For the last couple of years I've explored an old interest of mine with software engineering. Through my everlasting learning experience, I've come to a conclusion that I was born to be a programmer!</p>
-            </div>
-        </div>
+            </article>
+        </section>
 
-        <div class="second" id="projects">
+        <section id="projects">
             <h2>Kashane's Projects:</h2>
-            <div class="project-list">
-                <div class="project">
+            <section class="project-list">
+                <article>
                     <h4>Calculator</h4>
                     <img src="./assets/images/placeholder.png" alt="just a placeholder image" width="300" height="300">
-                    <p>I will add a description of this project</p>
-                </div>
+                    <ul>
+                        <li>I will add a description of this project later.</li>
+                        <li>I will include a brief summary of the project.</li>
+                        <li>As well as different languages and tools that I used.</li>
+                    </ul>
+                </article>
 
-                <div class="project">
+                <article>
                     <h4>Code Cypher</h4>
                     <img src="./assets/images/placeholder.png" alt="just a placeholder image" width="300" height="300">
-                    <p>I will add a description of this project</p>
-                </div>
+                    <ul>
+                        <li>I will add a description of this project later.</li>
+                        <li>I will include a brief summary of the project.</li>
+                        <li>As well as different languages and tools that I used.</li>
+                    </ul>
+                </article>
 
-                <div class="project">
-                    <h4>Testris Art</h4>
+                <article>
+                    <h4>Tetris Art</h4>
                     <img src="./assets/images/placeholder.png" alt="just a placeholder image" width="300" height="300">
-                    <p>I will add a description of this project</p>
-                </div>
+                    <ul>
+                        <li>I will add a description of this project later.</li>
+                        <li>I will include a brief summary of the project.</li>
+                        <li>As well as different languages and tools that I used.</li>
+                    </ul>
+                </article>
 
-                <div class="project">
+                <article>
                     <h4>Movie Me App</h4>
                     <img src="./assets/images/placeholder.png" alt="just a placeholder image" width="300" height="300">
-                    <p>I will add a description of this project</p>
-                </div>
-            </div>
-        </div>
+                    <ul>
+                        <li>I will add a description of this project later.</li>
+                        <li>I will include a brief summary of the project.</li>
+                        <li>As well as different languages and tools that I used.</li>
+                    </ul>
+                </article>
+            </section>
+        </section>
 
-        <div class="third" id="influences">
+        <section id="influences">
             <h2>People Who Influence Kashane:</h2>
             <h4>Tom Bilyeu</h4>
             <h4>J.K. Rowling</h4>
             <h4>Kobe Bryant</h4>
             <h4>Vitalik Buterin</h4>
-        </div>
+        </section>
 
-        <div class="forth" id="contact">
+        <section id="contact">
             <h2>Contact Kashane:</h2>
             <p>ksakhakorn@gmail.com</p>
-            <p>Resume(placeholder) (click to download)</p>
-        </div>
+            <p>Here is my resume: <a href="#" onclick="openResume()">Click me!</a></p>
+        </section>
 
     </main>
 
     <footer>
-        <h6>footer <span role="img" aria-label="heart">❤️</span> text </h6>
+        <h6>01000010 01101001 01110100 01100011 01101111 01101001 01101110 - Just a little binary fun!</h6>
     </footer>
 
+    <script src="./assets/resume/script.js"></script>
 </body>
 
 </html>
