changes to readme and added horiseon homepage links

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1 class="page-title">Kashane Sakhakorn</h1>
-        <p>Natural born software engineer!</p>
+        <p>A natural born software engineer!</p>
         <nav>
             <a href="#bio">&#8383;io</a>
             <a href="#projects">Projects</a>
@@ -28,23 +28,26 @@
             </figure>
             <article id="bio">
                 <h2>Kashane's &#8383;iography:</h2>
-                <h6>I'll keep it short and sweet!</h6>
-                <p>That's a picture of myself and Toto. I know, it's hard to tell which one of us is more photogenic.</p>
-                <p>I was born and raised in Los Angeles, California. My father immigrated from Bangkok, Thailand, and my mother, who is of Irish and English decent, was born in Los Angeles. </p>
-                <p>I've always had a knack for mathematics and problem solving. For the last couple of years I've explored an old interest of mine with software engineering. Through my everlasting learning experience, I've come to a conclusion that I was born to be a programmer!</p>
-            </article>
+                <h6>I'll keep it short and sweet! -</h6>
+                <ul>
+                    <li>That's a picture of myself and Toto. I know, it's hard to tell which one of us is more photogenic.</li><br>
+                    <li>I was born and raised in Los Angeles, California. My father immigrated from Bangkok, Thailand, and my mother, who is of Irish and English decent, was born in Los Angeles.</li><br>
+                    <li>I've always had a knack for mathematics and problem solving. For the last couple of years I've explored an old interest of mine with software engineering. Through my everlasting learning experience, I've come to a conclusion that I was born to be a programmer!</li><br>
+                </ul>
+                </article>
         </section>
 
         <section id="projects">
             <h2>Kashane's Projects:</h2>
             <section class="project-list">
-                <article>
-                    <h4>Calculator</h4>
-                    <img src="./assets/images/placeholder.png" alt="just a placeholder image" width="300" height="300">
+                <article id="first">
+                    <h4>Horiseon Homepage</h4>
+                    <a href="./assets/horiseon/index.html" target="_blank">
+                        <img src="./assets/horiseon/assets/images/hw1screenshot.png" alt="just a placeholder image" width="350" height="580">
+                    </a>
                     <ul>
-                        <li>I will add a description of this project later.</li>
-                        <li>I will include a brief summary of the project.</li>
-                        <li>As well as different languages and tools that I used.</li>
+                        <li>I was assigned to improve the accessability of the website, increase the functionality, and correct the syntax.</li>
+                        <li>The changes I made optimized the website for search engines.</li>
                     </ul>
                 </article>
 
