made some final changes and ready to upload the assignment

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Kashane Sakhakorn</title>
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="icon" href="./assets/images/favicon.ico">
 </head>
 
 <body>
@@ -34,7 +35,7 @@
                     <li>I was born and raised in Los Angeles, California. My father immigrated from Bangkok, Thailand, and my mother, who is of Irish and English decent, was born in Los Angeles.</li><br>
                     <li>I've always had a knack for mathematics and problem solving. For the last couple of years I've explored an old interest of mine with software engineering. Through my everlasting learning experience, I've come to a conclusion that I was born to be a programmer!</li><br>
                 </ul>
-                </article>
+            </article>
         </section>
 
         <section id="projects">
