added in more projects with written details about each one as well as links and a screenshot for each

--- a/index.html
+++ b/index.html
@@ -41,44 +41,49 @@
         <section id="projects">
             <h2>Kashane's Projects:</h2>
             <section class="project-list">
-                <article id="first">
-                    <h4>Horiseon Homepage</h4>
+                <article>
+                    <a href="https://kashane1.github.io/alpha-1-prime/" target="_blank">
+                        <h4>Coding BFF</h4>
+                        <img src="./assets/images/coding-bff-screenshot.png" alt="weather magic screenshot" width="350" height="400">
+                    </a>
+                    <ul>
+                        <li>I will add a description of this project later.</li>
+                        <li>I will include a brief summary of the project.</li>
+                        <li>As well as different languages and tools that I used.</li>
+                    </ul>
+                </article>
+
+                <article>
+                    <a href="https://kashane1.github.io/weather-magic/" target="_blank">
+                        <h4>Weather Magic</h4>
+                        <img src="./assets/images/weather-magic-screenshot.jpg" alt="weather magic screenshot" width="350" height="400">
+                    </a>
+                        <ul>
+                        <li>I created a Weather Magic application to give weather forecasts.</li>
+                        <li>Using the OpenWeatherMap API, I was able to pull data for any city in the United States</li>
+                        <li>The application also uses Local Storage to save the users search history.</li>
+                    </ul>
+                </article>
+
+                <article>
+                    <a href="https://kashane1.github.io/quiz-wiz/" target="_blank">
+                        <h4>Quiz Wiz</h4>
+                        <img src="./assets/images/quizwiz_gifmaker.gif" alt="quiz wiz gif" width="350" height="220">
+                    </a>
+                    <ul>
+                        <li>I created a simple quiz that utilizes Local Storage and manipulates elements on the page.</li>
+                        <li>The application also links to a separate page where highscores are saved by the user. </li>
+                    </ul>
+                </article>
+
+                <article>
                     <a href="./assets/horiseon/index.html" target="_blank">
-                        <img src="./assets/horiseon/assets/images/hw1screenshot.png" alt="just a placeholder image" width="350" height="580">
+                        <h4>Horiseon Homepage</h4>
+                        <img src="./assets/horiseon/assets/images/hw1screenshot.png" alt="horiseon homepage screenshot" width="350" height="580">
                     </a>
                     <ul>
                         <li>I was assigned to improve the accessability of the website, increase the functionality, and correct the syntax.</li>
                         <li>The changes I made optimized the website for search engines.</li>
-                    </ul>
-                </article>
-
-                <article>
-                    <h4>Code Cypher</h4>
-                    <img src="./assets/images/placeholder.png" alt="just a placeholder image" width="300" height="300">
-                    <ul>
-                        <li>I will add a description of this project later.</li>
-                        <li>I will include a brief summary of the project.</li>
-                        <li>As well as different languages and tools that I used.</li>
-                    </ul>
-                </article>
-
-                <article>
-                    <h4>Tetris Art</h4>
-                    <img src="./assets/images/placeholder.png" alt="just a placeholder image" width="300" height="300">
-                    <ul>
-                        <li>I will add a description of this project later.</li>
-                        <li>I will include a brief summary of the project.</li>
-                        <li>As well as different languages and tools that I used.</li>
-                    </ul>
-                </article>
-
-                <article>
-                    <h4>Movie Me App</h4>
-                    <img src="./assets/images/placeholder.png" alt="just a placeholder image" width="300" height="300">
-                    <ul>
-                        <li>I will add a description of this project later.</li>
-                        <li>I will include a brief summary of the project.</li>
-                        <li>As well as different languages and tools that I used.</li>
                     </ul>
                 </article>
             </section>
