final updates to readme file and index file. removed unnecessary files. also attemptied to make the page look better. matching links, better spacing.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <header>
-        <h1 class="page-title">Kashane Sakhakorn</h1>
-        <p>A natural born software engineer!</p>
+        <h1>Kashane Sakhakorn</h1>
+        <p id="below-title">A natural born software engineer!</p>
         <nav>
             <a href="#bio">&#8383;io</a>
             <a href="#projects">Projects</a>
@@ -44,7 +44,7 @@
                 <article>
                     <a href="https://kashane1.github.io/alpha-1-prime/" target="_blank">
                         <h4>Coding BFF</h4>
-                        <img src="./assets/images/coding-bff-screenshot.png" alt="weather magic screenshot" width="350" height="400">
+                        <img src="./assets/images/coding-bff-screenshot.png" alt="weather magic screenshot" width="420" height="380">
                     </a>
                     <ul>
                         <li>I will add a description of this project later.</li>
@@ -56,7 +56,7 @@
                 <article>
                     <a href="https://kashane1.github.io/weather-magic/" target="_blank">
                         <h4>Weather Magic</h4>
-                        <img src="./assets/images/weather-magic-screenshot.jpg" alt="weather magic screenshot" width="350" height="400">
+                        <img src="./assets/images/weather-magic-screenshot.jpg" alt="weather magic screenshot" width="330" height="320">
                     </a>
                         <ul>
                         <li>I created a Weather Magic application to give weather forecasts.</li>
@@ -77,32 +77,34 @@
                 </article>
 
                 <article>
-                    <a href="./assets/horiseon/index.html" target="_blank">
-                        <h4>Horiseon Homepage</h4>
-                        <img src="./assets/horiseon/assets/images/hw1screenshot.png" alt="horiseon homepage screenshot" width="350" height="580">
+                    <a href="https://kashane1.github.io/interactive-scheduling/" target="_blank">
+                        <h4>Interactive Schedule</h4>
+                        <img src="./assets/images/schedule-screenshot.jpg" alt="interactive schedule screenshot" width="350" height="350">
                     </a>
                     <ul>
-                        <li>I was assigned to improve the accessability of the website, increase the functionality, and correct the syntax.</li>
-                        <li>The changes I made optimized the website for search engines.</li>
+                        <li>I creative an interactive schedule that can be saved by the user.</li>
+                        <li>The date and time are accurate to the user's local time zone.</li>
+                        <li>The schedule will update to show past, present, and future according to the time.</li>
                     </ul>
                 </article>
             </section>
         </section>
 
-        <section id="influences">
-            <h2>People Who Influence Kashane:</h2>
-            <h4>Tom Bilyeu</h4>
-            <h4>J.K. Rowling</h4>
-            <h4>Kobe Bryant</h4>
-            <h4>Vitalik Buterin</h4>
-        </section>
+        <div id="bottom-div">
+            <section id="influences">
+                <h3>People Who Influence Kashane:</h3>
+                <h5>Tom Bilyeu</h5>
+                <h5>J.K. Rowling</h5>
+                <h5>Kobe Bryant</h5>
+                <h5>Vitalik Buterin</h5>
+            </section>
 
-        <section id="contact">
-            <h2>Contact Kashane:</h2>
-            <p>ksakhakorn@gmail.com</p>
-            <p>Here is my resume: <a href="#" onclick="openResume()">Click me!</a></p>
-        </section>
-
+            <section id="contact">
+                <h4>Contact Kashane:</h4>
+                <p>Email: <a href="mailto:ksakhakorn@gmail.com">ksakhakorn@gmail.com</a></p>
+                <p>Here is my resume: <a href="#" onclick="openResume()">Click me!</a></p>
+            </section>
+        </div>
     </main>
 
     <footer>
