--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             </figure>
             <article id="bio">
                 <h2>Kashane's &#8383;iography:</h2>
-                <h6>I'll keep it short and sweet! -</h6>
                 <ul>
+                    <li>I'll keep it short and sweet! -</li><br>
                     <li>That's a picture of myself and Toto. I know, it's hard to tell which one of us is more photogenic.</li><br>
                     <li>I was born and raised in Los Angeles, California. My father immigrated from Bangkok, Thailand, and my mother, who is of Irish and English decent, was born in Los Angeles.</li><br>
-                    <li>I've always had a knack for mathematics and problem solving. For the last couple of years I've explored an old interest of mine with software engineering. Through my everlasting learning experience, I've come to a conclusion that I was born to be a programmer!</li><br>
+                    <li>I've always had a knack for mathematics and problem solving. For the last couple of years I've explored an old interest of mine which is software engineering. On my nonstop journey of learning, I've come to the conclusion that I was born to be a programmer!</li><br>
                 </ul>
             </article>
         </section>
@@ -47,9 +47,8 @@
                         <img src="./assets/images/coding-bff-screenshot.png" alt="weather magic screenshot" width="420" height="380">
                     </a>
                     <ul>
-                        <li>I will add a description of this project later.</li>
-                        <li>I will include a brief summary of the project.</li>
-                        <li>As well as different languages and tools that I used.</li>
+                        <li><a href="https://github.com/kashane1/alpha-1-prime">Repository</a> - <a href="https://kashane1.github.io/alpha-1-prime/">Deployed Version</a></li>
+                        <li>I worked with a group utilizing the Custom Google Search API as well as the Youtube API.</li>
                     </ul>
                 </article>
 
@@ -59,9 +58,8 @@
                         <img src="./assets/images/weather-magic-screenshot.jpg" alt="weather magic screenshot" width="330" height="320">
                     </a>
                         <ul>
-                        <li>I created a Weather Magic application to give weather forecasts.</li>
-                        <li>Using the OpenWeatherMap API, I was able to pull data for any city in the United States</li>
-                        <li>The application also uses Local Storage to save the users search history.</li>
+                        <li><a href="https://github.com/kashane1/weather-magic">Repository</a> - <a href="https://kashane1.github.io/weather-magic/">Deployed Version</a></li>
+                        <li>I created a Weather Magic application using the OpenWeatherMap API to give weather forecasts.</li>
                     </ul>
                 </article>
 
@@ -71,8 +69,8 @@
                         <img src="./assets/images/quizwiz_gifmaker.gif" alt="quiz wiz gif" width="350" height="220">
                     </a>
                     <ul>
-                        <li>I created a simple quiz that utilizes Local Storage and manipulates elements on the page.</li>
-                        <li>The application also links to a separate page where highscores are saved by the user. </li>
+                        <li><a href="https://github.com/kashane1/quiz-wiz">Repository</a> - <a href="https://kashane1.github.io/quiz-wiz/">Deployed Version</a></li>
+                        <li>I created a quiz that utilizes LocalStorage and saves highscores to a separate page.</li>
                     </ul>
                 </article>
 
@@ -82,9 +80,8 @@
                         <img src="./assets/images/schedule-screenshot.jpg" alt="interactive schedule screenshot" width="350" height="350">
                     </a>
                     <ul>
-                        <li>I creative an interactive schedule that can be saved by the user.</li>
-                        <li>The date and time are accurate to the user's local time zone.</li>
-                        <li>The schedule will update to show past, present, and future according to the time.</li>
+                        <li><a href="https://github.com/kashane1/interactive-scheduling">Repository</a> - <a href="https://kashane1.github.io/interactive-scheduling/">Deployed Version</a></li>
+                        <li>I creative an interactive schedule that can be saved and will update to show past, present, and future according to the current time.</li>
                     </ul>
                 </article>
             </section>
@@ -100,9 +97,11 @@
             </section>
 
             <section id="contact">
-                <h4>Contact Kashane:</h4>
+                <h4>Contact Information:</h4>
+                <p>Resume: <a href="#" onclick="openResume()">Click me!</a></p>
+                <p>GitHUb: <a href="https://github.com/kashane1">Profile</a></p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/kashanesakhakorn/">Kashane Sakhakorn</a></p>
                 <p>Email: <a href="mailto:ksakhakorn@gmail.com">ksakhakorn@gmail.com</a></p>
-                <p>Here is my resume: <a href="#" onclick="openResume()">Click me!</a></p>
             </section>
         </div>
     </main>
