updated my portfolio after completing another big project. updated the readme to be more current as well. updated screenshots. small styling changes.

--- a/index.html
+++ b/index.html
@@ -42,20 +42,33 @@
             <h2>Kashane's Projects:</h2>
             <section class="project-list">
                 <article>
+                    <a href="https://planetplanters.herokuapp.com/" target="_blank">
+                        <h4>Planet Planters</h4>
+                        <img src="./assets/images/planet-planters-screenshot.jpg" alt="weather magic screenshot" width="460" height="300">
+                    </a>
+                        <ul>
+                        <li><a href="https://github.com/ultimatejayfox/Planet-Planters">Repository</a> - <a href="https://planetplanters.herokuapp.com/">Deployed Version</a></li>
+                        <li>I worked within a group of 4 people to build a blog website about plants.</li>
+                        <li>A user can create an account, make posts and comment on other posts.</li>
+                    </ul>
+                </article>
+
+                <article>
                     <a href="https://kashane1.github.io/alpha-1-prime/" target="_blank">
                         <h4>Coding BFF</h4>
-                        <img src="./assets/images/coding-bff-screenshot.png" alt="weather magic screenshot" width="420" height="380">
+                        <img src="./assets/images/coding-bff-screenshot.png" alt="weather magic screenshot" width="320" height="270">
                     </a>
                     <ul>
                         <li><a href="https://github.com/kashane1/alpha-1-prime">Repository</a> - <a href="https://kashane1.github.io/alpha-1-prime/">Deployed Version</a></li>
-                        <li>I worked with a group utilizing the Custom Google Search API as well as the Youtube API.</li>
+                        <li>I worked with a group of 4 peopleutilizing the Custom Google Search API as well as the Youtube API.</li>
+                        <li>We created an application where a user can search google, watch youtube and take notes, all in one place.</li>
                     </ul>
                 </article>
 
                 <article>
                     <a href="https://kashane1.github.io/weather-magic/" target="_blank">
                         <h4>Weather Magic</h4>
-                        <img src="./assets/images/weather-magic-screenshot.jpg" alt="weather magic screenshot" width="330" height="320">
+                        <img src="./assets/images/weather-magic-screenshot.jpg" alt="weather magic screenshot" width="320" height="300">
                     </a>
                         <ul>
                         <li><a href="https://github.com/kashane1/weather-magic">Repository</a> - <a href="https://kashane1.github.io/weather-magic/">Deployed Version</a></li>
@@ -66,7 +79,7 @@
                 <article>
                     <a href="https://kashane1.github.io/quiz-wiz/" target="_blank">
                         <h4>Quiz Wiz</h4>
-                        <img src="./assets/images/quizwiz_gifmaker.gif" alt="quiz wiz gif" width="350" height="220">
+                        <img src="./assets/images/quizwiz_gifmaker.gif" alt="quiz wiz gif" width="320" height="220">
                     </a>
                     <ul>
                         <li><a href="https://github.com/kashane1/quiz-wiz">Repository</a> - <a href="https://kashane1.github.io/quiz-wiz/">Deployed Version</a></li>
