minor typos that I found

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <article>
                     <a href="https://planetplanters.herokuapp.com/" target="_blank">
                         <h4>Planet Planters</h4>
-                        <img src="./assets/images/planet-planters-screenshot.jpg" alt="weather magic screenshot" width="460" height="300">
+                        <img src="./assets/images/planet-planters-screenshot.jpg" alt="planet planters screenshot" width="460" height="300">
                     </a>
                         <ul>
                         <li><a href="https://github.com/ultimatejayfox/Planet-Planters">Repository</a> - <a href="https://planetplanters.herokuapp.com/">Deployed Version</a></li>
@@ -56,7 +56,7 @@
                 <article>
                     <a href="https://kashane1.github.io/alpha-1-prime/" target="_blank">
                         <h4>Coding BFF</h4>
-                        <img src="./assets/images/coding-bff-screenshot.png" alt="weather magic screenshot" width="320" height="270">
+                        <img src="./assets/images/coding-bff-screenshot.png" alt="coding bff screenshot" width="320" height="270">
                     </a>
                     <ul>
                         <li><a href="https://github.com/kashane1/alpha-1-prime">Repository</a> - <a href="https://kashane1.github.io/alpha-1-prime/">Deployed Version</a></li>
