small changes to summary section

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             <article id="bio">
                 <h2>Kashane's &#8383;iography:</h2>
                 <ul>
-                    <li>I'll keep it short and sweet! -</li><br>
+                    <li>I'll keep it short and sweet!</li><br>
                     <li>That's a picture of myself and Toto. I know, it's hard to tell which one of us is more photogenic.</li><br>
                     <li>I was born and raised in Los Angeles, California. My father immigrated from Bangkok, Thailand, and my mother, who is of Irish and English decent, was born in Los Angeles.</li><br>
-                    <li>I've always had a knack for mathematics and problem solving. For the last couple of years I've explored an old interest of mine which is software engineering. On my nonstop journey of learning, I've come to the conclusion that I was born to be a programmer!</li><br>
+                    <li>I've always had a knack for mathematics and problem solving. For the last couple of years, I've explored an old interest of mine which is software engineering. I have come to the realization that programming is my true calling, as I continue my never-ending journey of learning.</li><br>
                 </ul>
             </article>
         </section>
